Fix invisible header buttons

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -12,12 +12,14 @@
 
   .route,
   .endRoute {
-    color: $primary-bg-color;
+    color: $secondary-text-color;
     padding: $spacing-three $spacing-six;
     margin: 0 $spacing-four;
     cursor: pointer;
     border-radius: 8px;
     transition: 0.25s background-color;
+    background: none;
+    border: 2px solid $primary-brand-color;
 
     font-size: $font-base-size;
     line-height: $font-base-line-height;
@@ -31,6 +33,8 @@
   .endRoute:hover,
   .selected {
     background-color: color.adjust($primary-brand-color, $lightness: -20%);
+    border-color: color.adjust($primary-brand-color, $lightness: -20%);
+    color: #ffffff;
   }
 
   .endRoute {
